test/asm/invalid-opt.err
error: invalid-opt.asm(1):
    Must specify exactly 2 characters for option 'b'
error: invalid-opt.asm(2):
    Invalid digit for binary constant '_'
error: invalid-opt.asm(3):
    Changed digit for binary constant '1'
error: invalid-opt.asm(4):
    Repeated digit for binary constant '0'
error: invalid-opt.asm(5):
    Must specify exactly 4 characters for option 'g'
error: invalid-opt.asm(6):
    Invalid digit for graphics constant '_'
error: invalid-opt.asm(7):
    Invalid digit for graphics constant '$'
error: invalid-opt.asm(8):
    Changed digit for graphics constant '2'
error: invalid-opt.asm(9):
    Repeated digit for graphics constant 'x'
error: invalid-opt.asm(10):
    Repeated digit for graphics constant 'y'
error: invalid-opt.asm(11):
    Invalid argument for option 'p'
error: invalid-opt.asm(12):
    Invalid argument for option 'p'
error: invalid-opt.asm(13):
    Invalid argument for option 'Q'
error: invalid-opt.asm(14):
    Invalid argument for option 'Q'
error: invalid-opt.asm(15):
    Argument for option 'Q' must be between 1 and 31
error: invalid-opt.asm(16):
    Argument to 'r' is out of range ("99999999999999999999999999")
error: invalid-opt.asm(17):
    Must specify an argument for option 'W'
error: invalid-opt.asm(18):
    syntax error, unexpected end of line, expecting string
error: invalid-opt.asm(19):
    No entries in the option stack
Assembly aborted with 19 errors!
